@@ -36,13 +36,13 @@ requires 'Wikibase::Datatype::Sense' => 0;
 requires 'Wikibase::Datatype::Sitelink' => 0;
 requires 'Wikibase::Datatype::Snak' => 0;
 requires 'Wikibase::Datatype::Statement' => 0;
-requires 'Wikibase::Datatype::Value' => 0.28;
+requires 'Wikibase::Datatype::Value' => 0.29;
 requires 'Wikibase::Datatype::Value::Globecoordinate' => 0;
 requires 'Wikibase::Datatype::Value::Item' => 0;
 requires 'Wikibase::Datatype::Value::Monolingual' => 0;
 requires 'Wikibase::Datatype::Value::Property' => 0;
 requires 'Wikibase::Datatype::Value::Quantity' => 0;
-requires 'Wikibase::Datatype::Value::Sense' => 0.28;
+requires 'Wikibase::Datatype::Value::Sense' => 0.29;
 requires 'Wikibase::Datatype::Value::String' => 0;
 requires 'Wikibase::Datatype::Value::Time' => 0;
 resources 'bugtracker' => 'https://github.com/michal-josef-spacek/Wikibase-Datatype-Struct/issues',
@@ -70,7 +70,7 @@ test_requires 'Wikibase::Datatype::Value::Item' => 0;
 test_requires 'Wikibase::Datatype::Value::Monolingual' => 0;
 test_requires 'Wikibase::Datatype::Value::Property' => 0;
 test_requires 'Wikibase::Datatype::Value::Quantity' => 0;
-test_requires 'Wikibase::Datatype::Value::Sense' => 0.28;
+test_requires 'Wikibase::Datatype::Value::Sense' => 0.29;
 test_requires 'Wikibase::Datatype::Value::String' => 0;
 test_requires 'Wikibase::Datatype::Value::Time' => 0;
 tests_recursive;
