@@ -1,4 +1,5 @@
 0.11
+ - Fix dependency to Wikibase::Datatype::Value::Sense.
  - Fix example in Wikibase::Datatype::Struct::Language.
  - Fix Mediainfo examples.
  - Improve Struct documentation.
